Hopeful fix for the zoom on iOS form input

--- a/src/SASS/Pages/cart.scss
+++ b/src/SASS/Pages/cart.scss
@@ -69,6 +69,7 @@ body.cart {
 					transition: all var(--trans-dur);
 					-webkit-appearance: none;
 					appearance: none;
+					font-size: 1rem;
 
 					&:focus {
 						color: rgba(#000, 1);
